truing up spacing, adding photos

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -5,7 +5,7 @@ layout: "standard"
 ---
 
 
-<section class="mv5 mw8 center ph4">
+<section class="mt0 mb5 mw8 center">
   
 	<!-- FAMILY BIOS -->
 
@@ -14,14 +14,14 @@ layout: "standard"
       
 	<!-- COL 1 -->
   
-	    <div class="fl w-100 w-50-ns pr3-ns">
+	    <div class="fl w-100 w-50-ns ph4">
         <%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3">Randy Dunn</h3>
         <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands on in vineyards most days. His love for Howell Mountain lead him to be instrumental in establishing it as a sub Appellation of the Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
       </div>
 
 	<!-- COL 2 -->
-      <div class="fl w-100 w-50-ns pl3-ns">
+      <div class="fl w-100 w-50-ns ph4">
         <%= image_tag ' family/lori-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3">Lori Dunn</h3>
         <p class="lh-copy measure">Co-founder of Dunn Vineyards and matriarch of the family, Lori is the glue that holds it all together. She managed everything from the accounting to kids.  Happy not to be involved in the day to day tasks (especially waxing the bottles), she loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that the gardens meet her Master Gardner specifications.</p>
@@ -32,14 +32,14 @@ layout: "standard"
 	<!-- ROW 2 -->
     <div class="w-100 center cf mb4">
 	<!-- COL 1 -->
-      <div class="fl w-100 w-50-ns pr3-ns">
+      <div class="fl w-100 w-50-ns ph4">
         <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3">Mike Dunn</h3>
         <p class="lh-copy measure">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dunn-link link dim' %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
       </div>
 
 	<!-- COL 2 -->
-      <div class="fl w-100 w-50-ns pl3-ns">
+      <div class="fl w-100 w-50-ns ph4">
         <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3">Kristina Dunn-Buchanan</h3>
         <p class="lh-copy measure">Marketer, mediator, and now mostly full time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
@@ -52,12 +52,12 @@ layout: "standard"
 
 
     <div class="w-100 center cf mb4-ns">
-      <div class="fl w-100 w-50-ns pr3-ns">
-        <%= image_tag ' family/jenny-portrait.jpg', :class => 'w-100' %>
+      <div class="fl w-100 w-50-ns ph4 tr">
+        <%= image_tag ' family/jenny-portrait.jpg', :class => 'w-70' %>
       </div>
 
-			<div class="fl w-100 w-50-ns pl3-ns">
-				<h3 class="normal mt2-m pt6-l">Jennifer Dunn</h3>
+			<div class="fl w-100 w-50-ns ph4">
+				<h3 class="normal mt2-m">Jennifer Dunn</h3>
 				<p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
 			</div>
 
@@ -141,7 +141,7 @@ layout: "standard"
    		
 	<div class="w-100 center cf mb4"> 
 		<!-- COL 1 -->
-		<div class="fl w-100 w-50-ns pr3-ns">
+		<div class="fl w-100 w-50-ns ph4">
 			<h3 class="normal mt4 mb0">Erin Begerow</h3>
 			<p class="lh-copy measure mt2">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
 			<h3 class="normal mt4 mb0">Raul Martinez</h3>
@@ -151,7 +151,7 @@ layout: "standard"
         <h3 class="normal mt4 mb0">Marcos Olivera</h3>
         <p class="lh-copy measure mt2">Brought on in 2005. Formerly he worked for the tunnel guys that dug our cave. Marcos is the back bone of the vineyard crew. Today he supervises the guys as Raul has many other duties to attend to.</p>
 		</div>
-		<div class="fl w-100 w-50-ns pl3-ns">
+		<div class="fl w-100 w-50-ns ph4">
         <h3 class="normal mt4 mb0">Rosalio Olivera</h3>
         <p class="lh-copy measure mt2">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
         <h3 class="normal mt4 mb0">Adriaan Foote</h3>
@@ -192,9 +192,4 @@ layout: "standard"
 	</div>
 
 </section>
-
-
-<script>
-
-</script>
 
