--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -6,9 +6,9 @@ hero: "story/harvest.jpg"
 
 
 
-<section class="mv5 mw8 center">
+<section class="mt0 mb5 mw8 center">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Getting Started</h2>
+    <h2 class="normal">Getting Started</h2>
     <p>In 1978 Randy and Lori purchased a 14 acre parcel in Angwin. The land had just about 5 acres of Cabernet vines planted on it. Working full time as a winemaker in Rutherford, he, Lori and Mike tended to the vines in the evening and on the weekend. The neighboring vineyard was being neglected and Randy agreed to farm it and buy the fruit starting in 1979. This property was owned by Harry Frank who did not live locally. That first harvest yielded 9 tons of fruit from these two vineyards. Randy purchased an additional 3 tons from the Beatty Ranch and Dunn Vineyards was underway.</p>
   </div>
 </section>
