--- a/source/tasting-notes.html.erb
+++ b/source/tasting-notes.html.erb
@@ -5,7 +5,7 @@ layout: "standard"
 
 
 
-<section class="mw8 center">
+<section class="mt0 mb5 mw8 center">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-30-l">
 			<div id="tags" class="f5 lh-copy pr4">
