--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -5,7 +5,7 @@ layout: "standard"
 
 ---
 
-<section class="mt0 mb5">
+<section class="mt0 mb5 mw8 center">
   <blockquote class="mt0 mb4 measure center cf">
     <p class="lh-copy mt0 mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
     <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
