space and dynamic date in footer

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,5 +1,5 @@
 
-<footer class="mt5">
+<footer class="mt5 mb6">
   <div class="mw8 center tc f3">    
 
     <%= link_to 'Home', '/', :class => 'dib dunn-link link dim pr3' %>
@@ -16,7 +16,7 @@
     <%= partial 'social' %>
     </div>
 -->
-    <p class="f6 mt4">&copy; 2017 Dunn Vineyards</p>
+<p class="f6 mt5 black-40">&copy;<%= Time.now.year %> Dunn Vineyards</p>
   </div>
 </footer>
 
