wine page is responsive

--- a/source/layouts/full-bleed.erb
+++ b/source/layouts/full-bleed.erb
@@ -10,11 +10,11 @@
 			</div>
     </div>
     
-    <section  class="pt4" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
+    <section  class="pt3 pt4-ns" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
 
-    <header class="mw8 center tc mb3">
+    <header class="mw8 center tc mb3 mb4-ns">
       <% link_to '/', :class => "link dib"  do %>
-        <%= image_tag 'logo.png', :class => "", :height => "84" %>
+        <%= image_tag 'logo.png', :class => "full-bleed-logo" %>
       <% end %>
     </header>
 
