--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,13 +1,13 @@
 
-<footer class="mt5 mb6">
-  <div class="mw8 center tc f3">    
+<footer class="mv4 mv5-ns ph3">
+  <div class="mw8 center tc f3 lh-copy">    
 
-    <%= link_to 'Home', '/', :class => 'dib dunn-link link dim pr3' %>
-    <%= link_to 'The Wine', 'wines', :class => 'dib dunn-link link dim pr3' %>
-    <%= link_to 'The Place', 'place', :class => 'di dunn-link link dim pr3' %>
-    <%= link_to 'The Family', 'family', :class => 'di dunn-link link dim pr3' %>
-    <%= link_to 'The Story', 'story', :class => 'di dunn-link link dim' %>
-    <div class="mt4 f6 ttu tracked">
+    <%= link_to 'Home', '/', :class => 'db dib-ns dunn-link link dim pr3-ns' %>
+    <%= link_to 'The Wine', 'wines', :class => 'db dib-ns dunn-link link dim pr3-ns' %>
+    <%= link_to 'The Place', 'place', :class => 'db dib-ns dunn-link link dim pr3-ns' %>
+    <%= link_to 'The Family', 'family', :class => 'db dib-ns dunn-link link dim pr3-ns' %>
+    <%= link_to 'The Story', 'story', :class => 'db- dib-ns dunn-link link dim' %>
+    <div class="mt3 f6 ttu tracked lh-copy">
       <%= link_to 'Facebook', 'https://www.facebook.com/Dunn-Vineyards-173548589349104/', :class => 'di dunn-link link dim pr3' %>
       <%= link_to 'Instagram', 'https://www.instagram.com/dunnvineyards/', :class => 'di dunn-link link dim pr3' %>
       <%= link_to 'Contact Us', 'contact', :class => 'di dunn-link link dim' %>
