--- a/source/stylesheets/dunn.css
+++ b/source/stylesheets/dunn.css
@@ -38,13 +38,21 @@ label:hover {
   text-decoration: underline;
 }
 
-/* scrapbook dims */
-
-/* for use in 1/3 x 2/3 layouts */
-.pb416 {
-  padding-bottom: 416px; 
+/* Header Logo */
+.full-bleed-logo {
+  height: 64px;
+}
+@media screen and (min-width: 30em) {
+  .full-bleed-logo {
+    height: 80px;
+  }
+}
+.standard-logo {
+  height: 54px;
+}
+@media screen and (min-width: 30em) {
+  .standard-logo {
+    height: 74px;
+  }
 }
 
-.bs-100 {
-  background-size: 100% !important; /* width */
-}
