--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -5,9 +5,9 @@ layout: "standard"
 
 ---
 
-<section class="mt0 mb5 mw8 center">
-  <blockquote class="mt0 mb4 measure center cf">
-    <p class="lh-copy mt0 mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
+<section class="mt0 mb4 mb5-ns mw8 center ph4">
+  <blockquote class="mt0 mb3 mb4-ns measure center cf">
+    <p class="lh-copy mt0 mb0 i">Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</p>
     <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
   </blockquote>
 
@@ -21,17 +21,17 @@ layout: "standard"
 
 <%= image_tag 'wine/vineyard.jpg', :class => 'w-100' %>
 
-<section class="mv5">
-	<div class="mw8 center cf mb4">
-		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt0 tc">Howell Mountain Cabernet</h2>
+<section class="mv4 mv5-ns ph4">
+	<div class="mw8 center cf mb3 mb4-ns">
+    <div class="fl w-100 w-50-l ph4-l">
+			<h2 class="normal mv0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %> .</p>
+      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %> .</p>
 					</div>
 
-		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt0 tc">Napa Valley Cabernet</h2>
-			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
+		<div class="fl w-100 w-50-l ph4-l">
+			<h2 class="normal mb0 mt3 mt4-ns mt0-l tc">Napa Valley Cabernet</h2>
+			<p class="lh-copy measure center">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
@@ -40,15 +40,15 @@ layout: "standard"
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
 
-   <section class="mv5">
+   <section class="mv4 mv5-ns ph4">
      <div class="mw8 center cf mb4">
-       <div class="fl w-100 w-50-l ph4">
-         <h2 class="normal mt0 tc">Availability</h2>
-         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. Our wine is also are available in select retail and restaurant locations across the country.</p>
+       <div class="fl w-100 w-50-l ph4-l">
+         <h2 class="normal mv0 tc">Availability</h2>
+         <p class="lh-copy measure center">Each fall we offer our latest release to our mailing list. Our wine is also are available in select retail and restaurant locations across the country.</p>
        </div>
-       <div class="fl w-100 w-50-l ph4">
-         <h2 class="normal mt0 tc">Library Wines</h2>
-         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. Though not available for sale, we sometimes release older vintages to our mailing list.</p>
+       <div class="fl w-100 w-50-l ph4-l">
+         <h2 class="normal mb0 mt3 mt4-ns mt0-l tc">Library Wines</h2>
+         <p class="lh-copy measure center mb0">We are committed to maintaining a library of all the vintages we have produced. Though not available for sale, we sometimes release older vintages to our mailing list.</p>
        </div>
      </div>
      <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link dim' %>.</p>
