--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,7 @@
 		</style>
 	</head>
 
-  <body class="<%= page_classes %> athelas black-70 f5 f4-ns">
+  <body class="<%= page_classes %> athelas black-70 f5 f4-l">
 
 
     <%= yield %>
