--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -70,16 +70,16 @@ layout: "standard"
 
 <section class="mw8 center ph4">
 	
-	<!-- SCRAPBOOK ROW 70/30 --> 
-  <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
+	<!-- CRAPBOOK ROW 70/30 --> 
+  <div class="w-100 cf mw9 center mb0 mb4-ns overflow-hidden scrapbook-height">
 
-    <div class="fl w-70 pr3-ns"> 
+    <div class="fl w-100 w-70-ns pr3-ns pb3 pb0-ns"> 
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-picnic.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-30 pl3-ns">
-      <div class="aspect-ratio aspect-ratio--5x8">
+ 		<div class="fl w-100 w-30-ns ph5 pl3-ns pr0-ns pb3 pb0-ns">
+      <div class="aspect-ratio aspect-ratio--5x8 center">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/randy-lori.jpg) top left;"> </div>
       </div>
     </div> 
@@ -89,13 +89,13 @@ layout: "standard"
 
 	<!-- SCRAPBOOK ROW 50/50 --> 
 
-  <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+  <div class="w-100 cf center mb0 mb4-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-pumpkin.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-1984ish.jpg) left;"> </div>
       </div>
@@ -105,13 +105,13 @@ layout: "standard"
 
   <!-- SCRAPBOOK ROW 30/70 --> 
 
-  <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
-    <div class="fl w-30 pr3-ns">
+  <div class="w-100 cf mw9 center mb0 mb4-ns overflow-hidden scrapbook-height">
+    <div class="fl w-100 w-30-ns ph5 pl0-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--5x8">
         <div class="aspect-ratio--object cover" style="background: url(/images/family/mike-picking.jpg) top center;"></div>
       </div>
     </div>
-    <div class="fl w-70 pr2 pr0-ns pl3-ns">
+    <div class="fl w-100 w-70-ns pr0-ns pl3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/family/jenny-cheerleader.jpg) left;"> </div>
       </div>
@@ -120,13 +120,13 @@ layout: "standard"
 
 	<!-- SCRAPBOOK ROW 50/50 --> 
 
-  <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+  <div class="w-100 cf center mb0 mb4-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-rlm.jpg) left;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-os.jpg) left;"> </div>
       </div>
@@ -169,22 +169,18 @@ layout: "standard"
 	
 
 <!-- SCRAPBOOK ROW --> 
-
-	<div class="w-100 cf mw9 center mb4">
-		<div class="fl w-100">
-			<div class="cover" style="background: url(/images/family/who.jpg) center; padding-bottom: 330px;"></div>
-		</div>
-	</div>
-	
+<div class="w-100 mb3 mb4-ns">
+    <%= image_tag 'family/who.jpg', :class => 'db w-100' %> 
+</div>
 	<!-- SCRAPBOOK ROW --> 
 
 	<div class="w-100 cf center mb4-ns">
-		<div class="fl w-50 pr3-ns">
+		<div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
 			<div class="aspect-ratio--object  cover" style="background: url(/images/family/erin.jpg) center;"></div>
       </div>
 		</div>
-		<div class="fl w-50 pr0-ns pl3-ns">
+		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
 			<div class="aspect-ratio--object cover" style="background: url(/images/family/adrian.jpg) left;"> </div>
       </div>
