fixing font sizes, contact page

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -7,7 +7,7 @@ layout: "standard"
 <section class="mt0 mb4 mb5-ns mw8 center ph4">
   <blockquote class="mb4 measure-narrow center">
   <p class="lh-copy i mb0">We farm 35 acres of Cabernet Sauvignon on Howell Mountain. Since 1979 we’ve done our best to care for these vines so that they produce a wine that tastes like Cabernet Sauvignon from Howell Mountain. Today we are hands on in the vineyard, on the crush pad and in the cellar. Any more land and we would need to spend more time administering and managing we’d prefer to farm.</p>
-    <cite class="f5 ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
+    <cite class="f6 f5-l ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
   </blockquote>
 </section>
 
@@ -17,15 +17,15 @@ layout: "standard"
   <div class="center measure">
 		<blockquote class="mb4 mb5-ns measure-narrow center">
 		<p class="lh-copy i mb0">I thought it was pretty and that I could make some good wine.</p>
-			<cite class="f5 tr db"> &mdash; <span class="tracked ttu">Randy Dunn</span></cite>
-			<cite class="f5 tr db">(on why he decided to farm on Howell Mountain)</cite>
+			<cite class="f6 f5-l tr db"> &mdash; <span class="tracked ttu">Randy Dunn</span></cite>
+			<cite class="f6 f5-l tr db">(on why he decided to farm on Howell Mountain)</cite>
 	</blockquote>
     <h2 class="normal mt4 mt5-ns  mb0">The Mountain</h2>
     <p class="lh-copy">Bill Smith led a group of 5 winemakers and grape growers to define what today is the Howell Mountain AVA. The AVA’s boundary starts at an elevation of 1400’ so even when it is cool and foggy on the valley floor, it is sunny and breezy up on the mountain. Randy was one of those pioneers and our wine epitomizes what has become synonymous with Howell Mountain Cabernet; deep concentration, bold, massive, ultra rich and elegant.</p>
 
 		<blockquote class="mv4 mv5-ns  measure-narrow center">
 		<p class="lh-copy i mb0">Howell Mountain grapes need thick skins to survive and thick skins provide deep flavors and chewy tannins.</p>
-			<cite class="f5 ttu tracked tr db measure"> &mdash; James Laube</cite>
+			<cite class="f6 f5-l ttu tracked tr db measure"> &mdash; James Laube</cite>
 		</blockquote>
 
   </div>
@@ -65,7 +65,7 @@ layout: "standard"
     <h2 class="normal mt4 mt5-ns mb0">The Winery</h2>
   <blockquote class="mb4 measure-narrow center">
     <p class="lh-copy measure i">Dunn’s winery sits in a fir forest high above the valley floor, a slightly scruffy compound with a ramshackle barn surrounded by agricultural equipment, outdoor fermentation tanks, and a fenced pasture with horses. The office is a former Western Union stagecoach stop.</p>
-    <cite class="f5 ttu tracked tr db measure"> &mdash; Jay McInerney</cite> 
+    <cite class="f6 f5-l ttu tracked tr db measure"> &mdash; Jay McInerney</cite> 
   </blockquote>
    </div>
 </section>
