--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -8,12 +8,12 @@ layout: "standard"
 <section class="mt0 mb4 mb5-ns mw8 center ph4">
   <blockquote class="mt0 mb3 mb4-ns measure center cf">
     <p class="lh-copy mt0 mb0 i">Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</p>
-    <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
+    <cite class="f6 f5-l ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
   </blockquote>
 
   <blockquote class="mt0 mb0 measure center cf">
     <p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
-    <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
+    <cite class="f6 f5-l ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
   </blockquote>
 
 <!-- <p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p> -->
