--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -4,16 +4,12 @@ layout: "standard"
 hero: "story/harvest.jpg"
 ---
 
-
-
-<section class="mt0 mb5 mw8 center">
+<section class="mt0 mb4 mb5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal">Getting Started</h2>
     <p>In 1978 Randy and Lori purchased a 14 acre parcel in Angwin. The land had just about 5 acres of Cabernet vines planted on it. Working full time as a winemaker in Rutherford, he, Lori and Mike tended to the vines in the evening and on the weekend. The neighboring vineyard was being neglected and Randy agreed to farm it and buy the fruit starting in 1979. This property was owned by Harry Frank who did not live locally. That first harvest yielded 9 tons of fruit from these two vineyards. Randy purchased an additional 3 tons from the Beatty Ranch and Dunn Vineyards was underway.</p>
   </div>
 </section>
-
-
 
 <section class="mw8 center ph4">
 	
@@ -27,11 +23,9 @@ hero: "story/harvest.jpg"
   
 </section>
 
-
-
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Making it Official</h2>
+    <h2 class="normal mt5-ns mb0">Making it Official</h2>
     <p>Everything picked up speed after that. Randy, Lori, Mike and baby Jennifer moved onto the property that today is the winery. It was officially bonded as a winery in 1981. The ATF approved Howell Mountain as a sub AVA of the Napa Valley and it became official in January of 1984. The family had grown and Lori was raising 2 young daughters and a teenage son, while Randy was still busy at work down Valley. All work for the family business was still relegated to evenings and weekends. In '85 Lori finally had her new house and Randy left his job.</p> 
   </div>
 </section>
@@ -40,13 +34,13 @@ hero: "story/harvest.jpg"
 
   <!-- SCRAPBOOK ROW 50/50 --> 
 
-  <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+  <div class="w-100 cf center mb0 mb4-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/white-house.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/brown-house.jpg) left;"> </div>
       </div>
@@ -55,13 +49,13 @@ hero: "story/harvest.jpg"
 
   <!-- SCRAPBOOK ROW 50/50 --> 
 
-  <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+  <div class="w-100 cf center mb0 mb4-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/jenny-tractor.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb0">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/fire-truck-water-fight.jpg) left;"> </div>
       </div>
@@ -71,9 +65,9 @@ hero: "story/harvest.jpg"
 
 </section>
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Full Speed Ahead</h2>
+    <h2 class="normal mb0">Full Speed Ahead</h2>
     <p>By the end of the '80's Dunn Vineyards had become a successful operation. Randy was consulting for other wineries and selling out all of his wine. In 1989 he had run out of room to store barrels and he tunneled into the mountain to make more space. </p> 
   </div>
 </section>
@@ -83,19 +77,19 @@ hero: "story/harvest.jpg"
 
 	<!-- SCRAPBOOK ROW 100 --> 
 
-  <div class="w-100 cf center mb4">
-    <%= image_tag 'story/caves-pano.jpg' %> 
+  <div class="w-100 cf center mb3 mb4-ns">
+    <%= image_tag 'story/caves-pano.jpg', :class => "db" %> 
   </div>
 
   <!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/airplane.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr2 pr0-ns pl3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-truck.jpg) left;"> </div>
       </div>
@@ -104,24 +98,24 @@ hero: "story/harvest.jpg"
 
 </section>
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">The Kids Get Back Involved</h2>
+    <h2 class="normal mb0">The Kids Get Back Involved</h2>
     <p>Mike came back to help out part time in 1999. As the cellar grunt it was a good three years before the winery was his full time job. Kristina graduated from Cal Poly with a degree in wine making and viticulture and by 2005 they were both taking direction from Randy. </p> 
   </div>
 </section>
 
 
-<section class="mv5 mw8 center ph4">
+<section class="mv4 mv5-ns mw8 center ph4">
   <!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-mike.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr2 pr0-ns pl3-ns pb0">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/kristina.jpg) left;"> </div>
       </div>
@@ -130,24 +124,24 @@ hero: "story/harvest.jpg"
 </section>
 
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">The Third Generation</h2>
+    <h2 class="normal mb0">The Third Generation</h2>
     <p>Kristina's girls are a little young yet, but they tour the vineyards eating wild blackberries, testing grape ripeness and visiting uncle Mike. Mike's son Alex has been helping out with bottling for the past several years and 2017 was his first full harvest. So far it looks good for the Dunn clan to continue farming this land.</p> 
   </div>
   
 </section>
 
-<section class="mv5 mw8 center ph4">
+<section class="mv4 mv5-ns mw8 center ph4">
   <!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/alex-kristina-stompin.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb0">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/alex.jpg) left;"> </div>
       </div>
@@ -156,24 +150,24 @@ hero: "story/harvest.jpg"
 </section>
       
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Above the Fog</h2>
+    <h2 class="normal mb0">Above the Fog</h2>
     <p>There are some distinct benefits to being above 1400 feet in elevation. We tend to see more sunshine each day and the heat tends to be more moderate. 
     Spring starts later for us as the weather is much cooler up here in Spring and Winter. We frequently have frost pressures around the time of bud break, which can carry through into flowering. In 2008 for example, four consecutive days in April brought 19 degree temperatures and we never saw about half of our crop. Our yields average about 2 tons an acre (which is really low) but the cool, wet vintages do not have the same negative effects that come with being on the valley floor. </p> 
   </div>
 </section>
 
-<section class="mv5 mw8 center ph4">
+<section class="mv4 mv5-ns mw8 center ph4">
   <!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr3-ns">
+    <div class="fl w-100 w-50-ns pr3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-gardening.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb0">
       <div class="aspect-ratio aspect-ratio--8x5">
         <div class="aspect-ratio--object cover" style="background: url(/images/story/mike-shop.jpg) left;"> </div>
       </div>
@@ -181,14 +175,14 @@ hero: "story/harvest.jpg"
   </div>
 </section>
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Today</h2>
+    <h2 class="normal mb0">Today</h2>
     <p>We farm about 35 acres of Cabernet Sauvignon on the property. This is a manageable size for us to remain in the drivers seat for all farming and wine making operations.</p>
   </div>
 </section>
 
-<section class="mv5 mw8 center">
+<section class="mv4 mv5-ns mw8 center">
 
   <div class="w-100 cf center mb4">
     <%= image_tag 'story/end.jpg' %> 
