--- a/source/how-to-remove-the-wax.html.erb
+++ b/source/how-to-remove-the-wax.html.erb
@@ -2,6 +2,8 @@
 title: "How to Remove the Red Wax" 
 layout: "standard"
 ---
-<section class="mt0 mb5 mw8 center tc">
-  <iframe width="853" height="480" src="http://www.youtube.com/embed/ydvf8yq2NOU" frameborder="0" allowfullscreen></iframe>
+<section class="mt0 mb4 mb5-l mw8 center tc ph4">
+  <div class="videoWrapper">
+    <iframe width="853" height="480" src="http://www.youtube.com/embed/ydvf8yq2NOU" frameborder="0" allowfullscreen></iframe>
+  </div>
 </section>
