--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -31,7 +31,9 @@ layout: "standard"
   </div>
 </section>
 
-<%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
+<section class="mw8 center tc">
+<%= image_tag 'place/map-new.jpg', :class => 'w-100' %>
+</section>
 
 <section class="mv4 mv5-ns mw8 center ph4">
 
