--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -32,7 +32,7 @@ layout: "standard"
 </section>
 
 <section class="mw8 center tc">
-<%= image_tag 'place/map-new.jpg', :class => 'w-100' %>
+<%= image_tag 'place/gmap.jpg', :class => 'w-100' %>
 </section>
 
 <section class="mv4 mv5-ns mw8 center ph4">
