--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -17,14 +17,14 @@ layout: "standard"
 	    <div class="fl w-100 w-50-ns ph3-m ph4-l">
         <%= image_tag ' family/randy-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3 mb0">Randy Dunn</h3>
-        <p class="lh-copy measure mb4 mb2-ns">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands on in vineyards most days. His love for Howell Mountain lead him to be instrumental in establishing it as a sub Appellation of the Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
+        <p class="lh-copy measure mb4 mb2-ns">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards, and never looked back. Now after all these years, not a lot has changed. More of a farmer, he’s hands-on in vineyards most days. His love for Howell Mountain led him to be instrumental in establishing it as a sub-AVA of Napa Valley. And if he’s not farming the mountain, he’s mountain biking on it, flying his plane over it, or finding ways to preserve it for future generations. He is happy to be called a dirt-loving hippie, but you’d probably think he’s more of a cowboy.
       </div>
 
 	<!-- COL 2 -->
       <div class="fl w-100 w-50-ns ph3-m ph4-l">
         <%= image_tag ' family/lori-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3 mb0">Lori Dunn</h3>
-        <p class="lh-copy measure mb4 mb2-ns">Co-founder of Dunn Vineyards and matriarch of the family, Lori is the glue that holds it all together. She managed everything from the accounting to kids.  Happy not to be involved in the day to day tasks (especially waxing the bottles), she loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that the gardens meet her Master Gardner specifications.</p>
+        <p class="lh-copy measure mb4 mb2-ns">Co-founder of Dunn Vineyards and matriarch of the family, Lori is the glue that holds it all together. She managed everything from the accounting to the kids.  Happy not to be involved in the day to day tasks (especially waxing the bottles), she loves spending time with her grandkids, quilting, relaxing at her oasis on Bodega Bay, and making sure that the gardens meet her Master Gardner specifications.</p>
       </div>
     </div>
   
@@ -35,14 +35,14 @@ layout: "standard"
       <div class="fl w-100 w-50-ns ph3-m ph4-l">
         <%= image_tag ' family/mike-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3 mb0">Mike Dunn</h3>
-        <p class="lh-copy measure mb4 mb2-ns">While he calls himself a “cellar grunt”, Mike actually oversees production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dunn-link link dim' %>. Before becoming a full time wine-maker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But they wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
+        <p class="lh-copy measure mb4 mb2-ns">While he calls himself a “cellar grunt”, Mike actually oversees the production of the wine, works with the team in the vineyards, and manages the overall operation. An interest in experimenting with other varietals lead Mike and his wife Kara to purchase some old vine Petite Sirah from Randy and start their own label <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dunn-link link dim' %>. Before becoming a full-time winemaker, Mike pursued his other interests. He graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing) and later owned a bike shop in Calistoga. He and Kara have two grown children who are currently on their own paths.  But he wouldn’t be surprised if, like their father, they end up farming grapes on Howell Mountain.</p>
       </div>
 
 	<!-- COL 2 -->
       <div class="fl w-100 w-50-ns ph3-m ph4-l">
         <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3 mb0">Kristina Dunn-Buchanan</h3>
-        <p class="lh-copy measure mb4 mb2-ns">Marketer, mediator, and now mostly full time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
+        <p class="lh-copy measure mb4 mb2-ns">Marketer, mediator, and now mostly full-time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a B.S. in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
     
 	</div>
 </div>
@@ -143,23 +143,23 @@ layout: "standard"
 		<!-- COL 1 -->
 		<div class="fl w-100 w-50-ns ph3-m ph4-l">
 			<h3 class="normal mt0 mb0">Erin Begerow</h3>
-			<p class="lh-copy measure mt2">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
+			<p class="lh-copy measure mt2">Office manager. She is a native Californian and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
 			<h3 class="normal mt4 mb0">Raul Martinez</h3>
 			<p class="lh-copy measure mt2">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
         <h3 class="normal mt4 mb0">Adan Salgado</h3>
-        <p class="lh-copy measure mt2">Adan joined the crew in 2001 and has been an invaluable contributer ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
+        <p class="lh-copy measure mt2">Adan joined the crew in 2001 and has been an invaluable contributor ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
         <h3 class="normal mt4 mb0">Marcos Olivera</h3>
         <p class="lh-copy measure mt2">Brought on in 2005. Formerly he worked for the tunnel guys that dug our cave. Marcos is the back bone of the vineyard crew. Today he supervises the guys as Raul has many other duties to attend to.</p>
 		</div>
 		<div class="fl w-100 w-50-ns ph3-m ph4-l">
         <h3 class="normal mt0  mb0">Rosalio Olivera</h3>
         <p class="lh-copy measure mt2">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
-        <h3 class="normal mt4 mb0">Adriaan Foote</h3>
+        <h3 class="normal mt4 mb0">Adrian Foote</h3>
         <p class="lh-copy measure mt2">Joining in 2014, Adriaan came over to help Mike in the cellar. He is a trained winemaker from South Africa and makes a small amount of Napa Valley and South African Chardonnay (<%= link_to "Hand of Fate", "http://www.handoffatewines.com", :class => "dim link dunn-link", :target => "_blank" %>) in conjunction with his Cabernet duties at the winery.</p>
-        <h3 class="normal mt4 mb0">Ben Hiza</h3>
-        <p class="lh-copy measure mt2">Ben arrived in time to help with the 2013 bottling and hasn't left yet. While he's in charge of distribution and tours, he's already ready to help with whatever needs doing.</p>
         <h3 class="normal mt4 mb0">Fernando Olivera</h3>
-        <p class="lh-copy measure mt2">Starting in 2015, he is the third member of this Olivera clan here in the vineyard. Fernando always has a smile on his face and laughs at all of Mike's jokes so he certainly has a successful future here in the vineyard.</p>
+        <p class="lh-copy measure mt2">Starting in 2015, he is the third member of this Olivera clan here in the vineyard. Fernando always has a smile on his face and laughs at all of Mike's jokes so he certainly has a successful future here.</p>
+        <h3 class="normal mt4 mb0">Ben Hiza</h3>
+        <p class="lh-copy measure mt2">Ben arrived in time to help with the 2013 bottling and hasn't left yet. While he's in charge of distribution and tours, he's already ready to help out with any task.</p>
 		</div>
 	</div>
 
