--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -8,11 +8,12 @@ layout: "standard"
 <section class="mt0 mb4 mb5-ns mw8 center ph4">
   <blockquote class="mt0 mb3 mb4-ns measure center cf">
     <p class="lh-copy mt0 mb0 i">Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</p>
-    <cite class="f6 f5-l ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
+    <cite class="f6 f5-l ttu tracked tr db tr"> &mdash; Jon Bonné</cite>
+    <cite class="f6 f5-l tr db tr"><%= link_to  '"Randy Dunn\'s Cabernet crusade", SF Gate', 'http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php', :target => "_blank", :class => 'dunn-link link dim' %></cite>
   </blockquote>
 
   <blockquote class="mt0 mb0 measure center cf">
-    <p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
+    <p class="lh-copy i mb0">The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place.</p>
     <cite class="f6 f5-l ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
   </blockquote>
 
@@ -26,7 +27,7 @@ layout: "standard"
     <div class="fl w-100 w-50-l ph4-l">
 			<h2 class="normal mv0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %> .</p>
+      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that the bottle is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %>.</p>
 					</div>
 
 		<div class="fl w-100 w-50-l ph4-l">
@@ -44,7 +45,7 @@ layout: "standard"
      <div class="mw8 center cf mb4">
        <div class="fl w-100 w-50-l ph4-l">
          <h2 class="normal mv0 tc">Availability</h2>
-         <p class="lh-copy measure center">Each fall we offer our latest release to our mailing list. Our wine is also are available in select retail and restaurant locations across the country.</p>
+         <p class="lh-copy measure center">Each fall we offer our latest release to our mailing list. Our wines are also are available in select retail and restaurant locations across the country.</p>
        </div>
        <div class="fl w-100 w-50-l ph4-l">
          <h2 class="normal mb0 mt3 mt4-ns mt0-l tc">Library Wines</h2>
