experimenting with links

--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -9,7 +9,7 @@ layout: "standard"
   <blockquote class="mt0 mb3 mb4-ns measure center cf">
     <p class="lh-copy mt0 mb0 i">Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</p>
     <cite class="f6 f5-l ttu tracked tr db tr"> &mdash; Jon Bonné</cite>
-    <cite class="f6 f5-l tr db tr"><%= link_to  '"Randy Dunn\'s Cabernet crusade", SF Gate', 'http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php', :target => "_blank", :class => 'dunn-link link dim' %></cite>
+    <cite class="f6 f5-l tr db tr"><%= link_to  '"Randy Dunn\'s Cabernet crusade", SF Gate', 'http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php', :target => "_blank", :class => 'dunn-link link underline-hover' %></cite>
   </blockquote>
 
   <blockquote class="mt0 mb0 measure center cf">
@@ -27,7 +27,7 @@ layout: "standard"
     <div class="fl w-100 w-50-l ph4-l">
 			<h2 class="normal mv0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that the bottle is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %>.</p>
+      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that the bottle is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link txt-link' %>.</p>
 					</div>
 
 		<div class="fl w-100 w-50-l ph4-l">
@@ -36,7 +36,7 @@ layout: "standard"
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
-			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dunn-link link dim' %></p>
+			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dunn-link link txt-link' %></p>
 </section>
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
@@ -52,7 +52,7 @@ layout: "standard"
          <p class="lh-copy measure center mb0">We are committed to maintaining a library of all the vintages we have produced. Though not available for sale, we sometimes release older vintages to our mailing list.</p>
        </div>
      </div>
-     <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link dim' %>.</p>
+     <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link txt-link' %>.</p>
    </section>
 
    <img src="/images/wine/caves.jpg" class="w-100">
