--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -46,14 +46,14 @@ layout: "standard"
         <p class="lh-copy i mt0 tc">Formerly the "Trailer Vineyard"</p>
         <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
         <h3 class="normal mt4 mt5-l tc">Lake Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy and Mike grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west border of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet was planted in 3 blocks in 2000, 2001 and 2003. This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers along with a wind machine for frost protection.</p>
+        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy and Mike grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west border of the vineyard. Mike named this Los Abuelos and uses it for his <%= link_to  'Retro Cellars', 'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label. The Cabernet was planted in 3 blocks in 2000, 2001 and 2003. This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers along with a wind machine for frost protection.</p>
       </div>
 
       <div class="fl w-100 w-50-l ph4-l">
         <h3 class="normal mt0 tc">Frank Vineyard</h3>
         <p class="lh-copy measure center">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and we re-planted the two blocks in 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
         <h3 class="normal mt4 mt5-l tc">Park Muscatine Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard was purchased in 1991. It's comprised of 5 distinct blocks. The first block “Cuervo” was replanted in 1991. “JK” was replanted in 1993, and 5 years later so was the “Below House” block. The tiny little “Creek” block will need some attention soon as this acre plot produces less than a ton of fruit. The “Old Petite” block was the source of Mike and Kara’s <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class => 'dunn-link link dim' %> project. The block was replanted to Cabernet in 2016 and has been renamed “Coyote”.</p>
+        <p class="lh-copy measure center ">This vineyard was purchased in 1991. It's comprised of 5 distinct blocks. The first block “Cuervo” was replanted in 1991. “JK” was replanted in 1993, and 5 years later so was the “Below House” block. The tiny little “Creek” block will need some attention soon as this acre plot produces less than a ton of fruit. The “Old Petite” block was the source of Mike and Kara’s <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class => 'dunn-link link txt-link' %> project. The block was replanted to Cabernet in 2016 and has been renamed “Coyote”.</p>
       </div>
 
     </div>
@@ -68,7 +68,7 @@ layout: "standard"
   <blockquote class="mb4 measure-narrow center">
     <p class="lh-copy measure i">Dunn’s winery sits in a fir forest high above the valley floor, a slightly scruffy compound with a ramshackle barn surrounded by agricultural equipment, outdoor fermentation tanks, and a fenced pasture with horses. The office is a former Western Union stagecoach stop.</p>
     <cite class="f6 f5-l ttu tracked tr db measure"> &mdash; Jay McInerney</cite> 
-    <cite class="f6 f5-l tr db measure"><%= link_to  '"Dunn Vineyards Is Making Some of the Best Napa Valley Cabernet", Town &amp; Country', 'http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/', :target => "_blank", :class => 'dunn-link link dim' %></cite> 
+    <cite class="f6 f5-l tr db measure"><%= link_to  '"Dunn Vineyards Is Making Some of the Best Napa Valley Cabernet", Town &amp; Country', 'http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/', :target => "_blank", :class => 'dunn-link link underline-hover' %></cite> 
   </blockquote>
    </div>
 </section>
@@ -78,7 +78,7 @@ layout: "standard"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="center measure">
     <h2 class="normal mb0">Open Space</h2>
-    <p class="lh-copy">Conservation is a priority today. Randy and Lori’s first involvement was in 2004. They gifted the development rights for their Sentinel Hill property, to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dunn-link dim' %>. The property is 64 acres of forested hillside overlooking the town of Angwin, up on Howell Mountain. Second was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
+    <p class="lh-copy">Conservation is a priority today. Randy and Lori’s first involvement was in 2004. They gifted the development rights for their Sentinel Hill property, to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dunn-link txt-link' %>. The property is 64 acres of forested hillside overlooking the town of Angwin, up on Howell Mountain. Second was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
 
 <p class="lh-copy">There is a sense of urgency in the Napa Valley to preserve the natural landscape. The influx of big money coming into the area puts tremendous pressure on the wild lands above the valley floor, there is constant tension between preservation and projects to clear land and plant vineyards. 
 </p>
