--- a/source/stylesheets/dunn.css
+++ b/source/stylesheets/dunn.css
@@ -31,10 +31,17 @@ a, a:active, a:focus, a:hover {
 
 /* links and labels */
 .dunn-link {
-  /*color: #AD582D;*/
-/* color: #7B2742; maroon */
-  color: #884540; /* grape bin red */
+   color: #884540; /* grape bin red */
 }
+.txt-link{
+   border-bottom: 2px solid #FBF1A9;
+   box-shadow: inset 0 -8px 0 #FBF1A9;
+}
+
+.txt-link:hover {
+  background: #FBF1A9; 
+}
+
 label:hover {
   text-decoration: underline;
 }
