--- a/source/_hamburger-overlay.erb
+++ b/source/_hamburger-overlay.erb
@@ -3,16 +3,16 @@
 <div class="overlay">
 	<div class="wrap">
 		<nav class="f2 f1-ns lh-copy mt5 mt6-ns">
-			<%= link_to  'Home', 'index', :class => 'white link dim db' %>
-			<%= link_to  'The Wine', 'wines', :class => 'white link dim db' %>
-			<%= link_to  'The Place', 'place', :class => 'white link dim db' %>
-			<%= link_to  'The Family', 'family', :class => 'white link dim db' %>
-			<%= link_to  'The Story', 'story', :class => 'white link dim db' %>
+			<%= link_to  'Home', 'index', :class => 'white link underline-hover db' %>
+			<%= link_to  'The Wine', 'wines', :class => 'white link underline-hover db' %>
+			<%= link_to  'The Place', 'place', :class => 'white link underline-hover db' %>
+			<%= link_to  'The Family', 'family', :class => 'white link underline-hover db' %>
+			<%= link_to  'The Story', 'story', :class => 'white link underline-hover db' %>
 		</nav>
 		<div class="mt4 f6 ttu tracked lh-copy">
-			<%= link_to 'Facebook', 'https://www.facebook.com/Dunn-Vineyards-173548589349104/', :class => 'di white link dim pr3' %>
-			<%= link_to 'Instagram', 'https://www.instagram.com/dunnvineyards/', :class => 'di white link dim pr3' %>
-			<%= link_to 'Contact Us', 'contact', :class => 'di white link dim' %>
+			<%= link_to 'Facebook', 'https://www.facebook.com/Dunn-Vineyards-173548589349104/', :class => 'di white link underline-hover pr3' %>
+			<%= link_to 'Instagram', 'https://www.instagram.com/dunnvineyards/', :class => 'di white link underline-hover pr3' %>
+			<%= link_to 'Contact Us', 'contact', :class => 'di white link underline-hover' %>
 		</div>
 	</div>
 </div>
